--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Wide/default.css
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Wide/default.css
@@ -1,5 +1,5 @@
 .ca_template_icon {color:#606E7F;width:180px;float:left;display:inline-block;background-color: #C7C5CB;margin:0px;height:290px;padding-top:10px;border-radius:20px 0px 0px 20px;}
-.ca_template {color:#606E7F;border-radius:0px 20px 20px 0px;display:inline-block;width:370px;text-align:left;float:left;overflow:auto;height:280px;background-color:#EDEAEF;padding:10px;font-size:12px;}
+.ca_template {color:#606E7F;border-radius:0px 20px 20px 0px;display:inline-block;width:370px;text-align:left;float:left;overflow:auto;height:280px;background-color:#DDDADF;padding:10px;font-size:12px;}
 .ca_category {color:purple;}
 .ca_author {color:black;font-weight:bold;cursor:pointer;}
 .ca_applicationName {color:black;font-size:large;}
@@ -10,7 +10,7 @@ input.appButtons {margin:0px;}
 input.viewButton {margin:1px;}
 input.sortButton {margin:1px;}
 input.dirButton {margin:1px;}
-input.allButtons {margin:-1px;}
+input.allButtons {margin:0px;padding:10px;}
 input[type=checkbox] {width:20px;height:20px;}
 .enabledIcon {cursor:pointer;color:#005500;font-size:25px;}
 .disabledIcon {cursor:pointer;color:#040404;font-size:25px;}
