--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -588,6 +588,7 @@ function changePage(pageNumber) {
 	$.post(URL,{action:'display_content',sortOrder:sortOrder,windowWidth:windowWidth,pageNumber:pageNumber,maxPerPage:maxPerPage,selected:selected},function(data3) {
 		if (data3) {
 			updateDisplay(data3);
+		  $('html,body').animate({scrollTop:0},500);
 			readMore();
 			setToolTip();
 			myCloseAlert();
