--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -489,6 +489,30 @@ function setToolTip() {
 			});
 		}
 	});
+	$('.ca_infoPopup').tooltipster({
+		contentAsHTML: true,
+		maxWidth:550,
+		minWidth:550,
+		distance:-10,
+		animation: 'none',
+		trigger: 'custom',
+		triggerOpen: {mouseenter:false,click:true,touchstart:true},
+		triggerClose:{click:true,mouseleave:true},
+		delay:[<?=$cfg['hoverTime']?>,1],
+		interactive: true,
+		viewportAware: true,
+		functionBefore: function(instance,helper) {
+		$("#debugging").html("hello");
+			var origin = $(helper.origin);
+			var app = origin.attr('data-app');
+			var name = origin.attr('data-name');
+			$.post("/plugins/<?=$plugin?>/scripts/showInfo.php",{action:'none',app:app,name:name},function(data) {
+				if (data) {
+					instance.content(data);
+				}
+			});
+		}
+	});
 }
 
 function showSpecialCategory(button) {
